Wallet scrollbar fix (#4284)
* fixed scrolbar on page title

* fix scroll issues

* rm custom scrollbar

--- a/wallet/src/ui/app/pages/home/transfer-coin/TransferCoinPage.module.scss
+++ b/wallet/src/ui/app/pages/home/transfer-coin/TransferCoinPage.module.scss
@@ -32,4 +32,13 @@
             background-color: colors.$sui-steel-blue;
         }
     }
+
+    .content {
+        padding-left: 25px;
+        padding-right: 25px;
+        margin-left: -25px;
+        margin-right: -25px;
+        overflow-y: auto;
+        height: 100%;
+    }
 }
